# SmollDB

./: .gitignore  Cargo.toml  LICENSE  README.md  database.smoll  myfile.smoll
benches/: chonky.rs
src/: datatype.rs  db.rs  error.rs  lib.rs  tests.rs  util.rs
tests/: tests.rs
