[package]
name = "smolldb"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.65.0"
readme = "README.md"
repository = "https://github.com/ninomerlino/SmollDB/"
keywords = ["small", "key-value","database"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yazi = "0.1.4"

[dev-dependencies]
serial_test = "*"
